Linking a Group of linked Groups don't take Dupli Visibility correctly #40164

Closed
opened 2014-05-12 17:54:34 +02:00 by Gabriel Caraballo · 8 comments

System Information
Ubuntu 12.04

Blender Version
Broken: 2.69, 2.70a
Worked: ?

If you link a GroupA containing 2 or more copies of a linked GroupB with Dupli Visibility set to layer 2, you will see only one GroupB inside the linked GroupA taking Dupli Visibility with layer 2, all other copies will set Dupli Visibility to layer 1.

If you have a group Tree with Dupli Groups sent to layer 2 only in the file Tree.blend linked into the file Forest.blend and grouped as Forest and link Forest group in the blend ForestPicture.blend you will see only one Tree.

Hard to explain, but easy to see the effect in the attached example. linkedBug.zip

  • Open linkBug.blend you will see 1 cube, and several empties.
  • Open linkedElement.blend and set layer 1 on at Dupli Visibility of group Group
  • All the cubes will be visible now on linkBug.blend

Regards,
Eibriel

**System Information** Ubuntu 12.04 **Blender Version** Broken: 2.69, 2.70a Worked: ? If you link a GroupA containing 2 or more copies of a linked GroupB with Dupli Visibility set to layer 2, you will see only one GroupB inside the linked GroupA taking Dupli Visibility with layer 2, all other copies will set Dupli Visibility to layer 1. If you have a group Tree with Dupli Groups sent to layer 2 only in the file Tree.blend linked into the file Forest.blend and grouped as Forest and link Forest group in the blend ForestPicture.blend you will see only one Tree. Hard to explain, but easy to see the effect in the attached example. [linkedBug.zip](https://archive.blender.org/developer/F88679/linkedBug.zip) - Open linkBug.blend you will see 1 cube, and several empties. - Open linkedElement.blend and set layer 1 on at Dupli Visibility of group Group - All the cubes will be visible now on linkBug.blend Regards, Eibriel

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @GabrielCaraballo

Added subscriber: @GabrielCaraballo
Lukas Tönne self-assigned this 2014-05-15 13:31:50 +02:00
Member

Added subscriber: @Sergey

Added subscriber: @Sergey
Member

This is a problem with duplis modifying the base Object DNA data when constructing the duplilists. We had similar issues with modified obmats, these are fundamental design mistakes that are really hard to root out without breaking stuff ... Like you said, this problem exists at least in 2.69 already, it's not a recent regression.

Adding @Sergey as CC for further input.

Problem is essentially this behavior:
https://developer.blender.org/diffusion/B/browse/master/source/blender/blenkernel/intern/object_dupli.c$166
Equivalent line before the dupli restructuring in january (6940bf0):
https://developer.blender.org/diffusion/B/browse/master/source/blender/blenkernel/intern/anim.c;0c9d8970433c7653483431f96d33d72106b7c741$734

This code was originally added here:
21e7a5f142

It's not very clear what the issue was/is and whether we still need that, or if it can be implemented in a less hacky way that preserves the integrity of the Object DNA data better.

This is a problem with duplis modifying the base Object DNA data when constructing the duplilists. We had similar issues with modified obmats, these are fundamental design mistakes that are really hard to root out without breaking stuff ... Like you said, this problem exists at least in 2.69 already, it's not a recent regression. Adding @Sergey as CC for further input. Problem is essentially this behavior: https://developer.blender.org/diffusion/B/browse/master/source/blender/blenkernel/intern/object_dupli.c$166 Equivalent line before the dupli restructuring in january (6940bf0): https://developer.blender.org/diffusion/B/browse/master/source/blender/blenkernel/intern/anim.c;0c9d8970433c7653483431f96d33d72106b7c741$734 This code was originally added here: 21e7a5f142 It's not very clear what the issue was/is and whether we still need that, or if it can be implemented in a less hacky way that preserves the integrity of the Object DNA data better.

Added subscriber: @mont29

Added subscriber: @mont29

This issue was referenced by c9ac51ec1f

This issue was referenced by c9ac51ec1ffd77efcff758bc42a37fd02859a4bc
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Member

Closed by commit c9ac51ec1f.

Closed by commit c9ac51ec1f.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40164
No description provided.